--- a/core/build.gradle
+++ b/core/build.gradle
@@ -46,6 +46,7 @@ dependencies {
   compileOnly deps.jsr305
   
   implementation deps.supportAppCompat
+  implementation deps.gson
 
   androidTestImplementation deps.dexmaker
   androidTestImplementation deps.dexmakerDx
