--- a/versions.gradle
+++ b/versions.gradle
@@ -20,22 +20,23 @@ ext {
   final lithoVersion = "0.34.0"
 
   versions = [
-      kotlin    : '1.3.61',
-      targetSdk : 28,
-      compileSdk: 28,
+      kotlin    : '1.4.21',
+      targetSdk : 30,
+      compileSdk: 30,
       minSdk    : 14,
   ]
 
   plugs = [
-      agp        : "com.android.tools.build:gradle:3.6.0",
+      agp        : "com.android.tools.build:gradle:4.1.1",
       screenshot : "com.facebook.testing.screenshot:plugin:$screenshotTestVersion",
       kotlin     : "org.jetbrains.kotlin:kotlin-gradle-plugin:${versions.kotlin}",
       versions   : 'com.github.ben-manes:gradle-versions-plugin:0.20.0'
   ]
 
   deps = [
-      supportAppCompat    : "androidx.appcompat:appcompat:1.1.0",
-      supportDesign       : "com.google.android.material:material:1.1.0",
+      supportAppCompat    : "androidx.appcompat:appcompat:1.2.0",
+      supportAnnotation   : "androidx.annotation:annotation:1.1.0",
+      supportDesign       : "com.google.android.material:material:1.2.1",
       supportMultidex     : "androidx.multidex:multidex:2.0.1",
 
       kotlinStdlib        : "org.jetbrains.kotlin:kotlin-stdlib-jdk7:${versions.kotlin}",
@@ -56,8 +57,9 @@ ext {
       dexmakerDx          : "com.crittercism.dexmaker:dexmaker-dx:$dexmakerVersion",
       dexmakerMockito     : "com.crittercism.dexmaker:dexmaker-mockito:$dexmakerVersion",
 
-      espresso            : "androidx.test.espresso:espresso-core:3.1.0",
-      androidTestRules    : "androidx.test:rules:1.1.0",
+      espresso            : "androidx.test.espresso:espresso-core:3.3.0",
+      androidTestRules    : "androidx.test:rules:1.3.0",
+      androidTestJunit    : "androidx.test.ext:junit:1.1.2",
       junit               : "junit:junit:4.12",
       mockito             : "org.mockito:mockito-core:1.10.19",
       hamcrest            : "org.hamcrest:hamcrest-core:1.3",
